--- a/plugin.xml
+++ b/plugin.xml
@@ -28,7 +28,7 @@
                 <param name="android-package" value="com.spoon.spectrum.SpectrumManager" />
             </feature>
         </config-file>
-        <source-file src="src/android/SpectrumManager.java" target-dir="src/com/spoon/spectrum/SpectrumManager" />
+        <source-file src="src/android/SpectrumManager.java" target-dir="src/com/spoon/spectrum" />
     </platform>
 	
 	<!-- ios -->
