--- a/plugin.xml
+++ b/plugin.xml
@@ -11,9 +11,9 @@
     <keywords>cordova, plugin, spectrum, transcoding, image</keywords>
     <license>Apache 2.0</license>
     <repo>https://github.com/spoonconsulting/cordova-plugin-spectrum.git</repo>
-    
-    <js-module src="www/Spectrum.js" name="Spectrum">
-        <clobbers target="Spectrum" />
+     <js-module src="tests.js" name="tests"></js-module>
+    <js-module src="www/SpectrumManager.js" name="SpectrumManager">
+        <clobbers target="SpectrumManager" />
     </js-module>
 
    
