--- a/plugin.xml
+++ b/plugin.xml
@@ -39,6 +39,7 @@
             </feature>
         </config-file>
 		<framework src="SpectrumKit/Base" type="podspec" spec="~> 1.1.0" />
+		<framework src="SpectrumCore/Base" type="podspec" spec="~> 1.1.0" />
         <framework src="SpectrumKit/Plugins/Jpeg" type="podspec" spec="~> 1.1.0" />
         <framework src="SpectrumKit/Plugins/Png" type="podspec" spec="~> 1.1.0" />
         <header-file src="src/ios/SpectrumManager.h" />
