--- a/plugin.xml
+++ b/plugin.xml
@@ -38,10 +38,9 @@
                 <param name="ios-package" value="SpectrumManager" />
             </feature>
         </config-file>
-		<framework src="SpectrumKit" type="podspec" spec="~> 1.1.0" />
+		<framework src="SpectrumKit/Base" type="podspec" spec="~> 1.1.0" />
 		<framework src="SpectrumCore/Base" type="podspec" spec="~> 1.1.0" />
         <framework src="SpectrumKit/Plugins/Jpeg" type="podspec" spec="~> 1.1.0" />
-        <framework src="SpectrumKit/Plugins/Png" type="podspec" spec="~> 1.1.0" />
         <header-file src="src/ios/SpectrumManager.h" />
         <source-file src="src/ios/SpectrumManager.m" />
 	</platform>
