--- a/plugin.xml
+++ b/plugin.xml
@@ -38,9 +38,9 @@
                 <param name="ios-package" value="SpectrumManager" />
             </feature>
         </config-file>
-		<framework src="SpectrumKit/Base" type="podspec" spec="~> 1.1.0" />
-		<framework src="SpectrumCore/Base" type="podspec" spec="~> 1.1.0" />
-        <framework src="SpectrumKit/Plugins/Jpeg" type="podspec" spec="~> 1.1.0" />
+		<!-- <framework src="SpectrumKit/Base" type="podspec" spec="~> 1.1.0" />
+		<framework src="SpectrumCore/Base" type="podspec" spec="~> 1.1.0" /> -->
+        <framework src="SpectrumKit" type="podspec" git="https://github.com/facebookincubator/spectrum.git" />
         <header-file src="src/ios/SpectrumManager.h" />
         <source-file src="src/ios/SpectrumManager.m" />
 	</platform>
