--- a/plugin.xml
+++ b/plugin.xml
@@ -39,15 +39,15 @@
             </feature>
         </config-file>
 		<!-- <framework src="SpectrumKit/Base" type="podspec" spec="~> 1.1.0" />
-		<framework src="SpectrumCore/Base" type="podspec" spec="~> 1.1.0" /> 
-        <framework src="SpectrumKit" type="podspec" git="https://github.com/facebookincubator/spectrum.git" />-->
-        <podspec>
+		<framework src="SpectrumCore/Base" type="podspec" spec="~> 1.1.0" /> -->
+        <framework src="SpectrumKit" type="podspec" spec=":path => './spectrum_core'" />
+        <!-- <podspec>
          <config>
         </config>
             <pods use-frameworks="false">
                 <pod name="SpectrumKit" path="./spectrum_core" />
             </pods>
-        </podspec>
+        </podspec> -->
 
         <header-file src="src/ios/SpectrumManager.h" />
         <source-file src="src/ios/SpectrumManager.m" />
