--- a/tests/plugin.xml
+++ b/tests/plugin.xml
@@ -10,4 +10,8 @@
     <license>Apache 2.0</license>
     <repo>https://github.com/spoonconsulting/cordova-plugin-spectrum.git</repo>
      <js-module src="tests.js" name="tests"></js-module>
+     <dependency id="cordova-plugin-file" version="6.0.2" />
+     <platform name="android">
+        <resource-file src="tree.jpg" target="assets/tree.jpg" />
+     </platform>
 </plugin>
