--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   "scripts": {
     "lint": "eslint **/*.js",
     "cordova-paramedic": "cordova-paramedic",
-    "test:android": "cordova-paramedic --platform android --plugin . --timeout 10000 --outputDir /tmp/test_results",
-    "test:ios": "cordova-paramedic --platform ios --plugin . --verbose"
+    "test:android": "cordova-paramedic --platform android --plugin . --outputDir /tmp/test_results",
+    "test:ios": "cordova-paramedic --platform ios --plugin . --verbose --args=--verbose "
   },
   "dependencies": {},
   "author": "Spoon Consulting",
