--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,16 @@ matrix:
     - os: linux
       jdk: oraclejdk8
       language: android
+      before_install:
+        - export PATH=/usr/local/android-sdk/build-tools/28.0.3/:${PATH}
 android:
   components:
     - tools
     - platform-tools
     - tools
-    - build-tools-25.0.2
+    - build-tools-28.0.3
     - android-22
-    - android-24
+    - android-28
     - sys-img-armeabi-v7a-android-N
   licenses:
     - 'android-sdk-preview-license-.+'
