--- a/.travis.yml
+++ b/.travis.yml
@@ -16,13 +16,13 @@ android:
     - build-tools-28.0.3
     - android-22
     - android-28
-    - sys-img-armeabi-v7a-android-N
+    - sys-img-armeabi-v7a-android-N sys-img-x86-android-28 sys-img-armeabi-v7a-android-22
   licenses:
     - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
 script:
-  - nvm install 6.10.2
-  - nvm use 6.10.2
+  - nvm install 10.9.0
+  - nvm use 10.9.0
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then rvm use system; fi
   - /bin/bash tests/travis.sh
