--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ matrix:
       language: android
       before_install:
         - export PATH=/usr/local/android-sdk/build-tools/28.0.3/:${PATH}
+        - yes | sdkmanager "platforms;android-27"
+        - yes | sdkmanager "platforms;android-28"
 android:
   components:
     - tools
@@ -16,7 +18,9 @@ android:
     - build-tools-28.0.3
     - android-22
     - android-28
-    - sys-img-armeabi-v7a-android-N sys-img-x86-android-28 sys-img-armeabi-v7a-android-22
+    - sys-img-armeabi-v7a-android-N
+    - sys-img-x86-android-28
+    - sys-img-armeabi-v7a-android-22
   licenses:
     - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
