--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "cordova-ios"
   ],
   "scripts": {
-    "lint": "npx standard tests/*.js",
+    "lint": "npx standard tests/tests.js",
     "cordova-paramedic": "cordova-paramedic",
     "test:android": "cordova-paramedic --platform android --plugin .",
     "test:ios": "cordova-paramedic --platform ios --plugin . --verbose --args=--verbose "
