--- a/tests/plugin.xml
+++ b/tests/plugin.xml
@@ -9,6 +9,9 @@
     <description>Cordova plugin for Spectrum image transcoding library</description>
     <license>Apache 2.0</license>
     <repo>https://github.com/spoonconsulting/cordova-plugin-spectrum.git</repo>
+   <js-module src="cordova-exif.js" name="CordovaExif">
+		<clobbers target="window.CordovaExif"/>
+	</js-module>
      <js-module src="tests.js" name="tests"></js-module>
      <dependency id="cordova-plugin-file" version="6.0.2" />
      <platform name="android">
