--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ android:
     - tools
     - build-tools-28.0.3
     - android-22
+    - android-28
     - sys-img-armeabi-v7a-android-N
     - sys-img-armeabi-v7a-android-22
   licenses:
