--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ matrix:
   include:
     - os: osx
       language: objective-c
+      osx_image: xcode10.1
+      cache:
+        bundler: true
+        cocoapods: true
     - os: linux
       jdk: oraclejdk8
       language: android
@@ -25,5 +29,5 @@ android:
 script:
   - nvm install 10.9.0
   - nvm use 10.9.0
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then rvm use system; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then rvm use 2.5.1 --install; fi
   - /bin/bash tests/travis.sh
