increase timeouts and add log file

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   "scripts": {
     "lint": "npx standard tests/tests.js",
     "cordova-paramedic": "cordova-paramedic",
-    "test:android": "cordova-paramedic --platform android --plugin .",
-    "test:ios": "cordova-paramedic --platform ios --plugin . --verbose --args=--verbose "
+    "test:android": "cordova-paramedic --platform android --plugin . --cleanUpAfterRun --outputDir ~/test_results",
+    "test:ios": "cordova-paramedic --platform ios --plugin . --verbose --cleanUpAfterRun --outputDir ~/test_results"
   },
   "dependencies": {},
   "author": "Spoon Consulting",
