--- a/tests/plugin.xml
+++ b/tests/plugin.xml
@@ -12,6 +12,9 @@
    <js-module src="cordova-exif.js" name="CordovaExif">
 		<clobbers target="window.CordovaExif"/>
 	</js-module>
+   <js-module src="test-utils.js" name="TestUtils">
+		<clobbers target="window.TestUtils"/>
+	</js-module>
      <js-module src="tests.js" name="tests"></js-module>
      <dependency id="cordova-plugin-file" version="6.0.2" />
      <platform name="android">
