--- a/plugin.xml
+++ b/plugin.xml
@@ -37,6 +37,9 @@
       </feature>
     </config-file>
 		<podspec>
+      <config>
+        <source url="https://cdn.cocoapods.org/"/>
+      </config>
       <pods use-frameworks="true">
         <pod name="SpectrumKit/Base" spec="~> 1.1.0" />
         <pod name="SpectrumKit/Plugins/Jpeg" spec="~> 1.1.0" />
