--- a/plugin.xml
+++ b/plugin.xml
@@ -2,8 +2,8 @@
 <plugin 
 	xmlns="http://apache.org/cordova/ns/plugins/1.0" 
 	xmlns:android="http://schemas.android.com/apk/res/android" 
-	id="cordova-plugin-spectrum"
-    version="0.0.1">
+	id="@spoonconsulting/cordova-plugin-spectrum"
+    version="1.0.1">
     
     <name>cordova-plugin-spectrum</name>
     <description>Cordova plugin for Spectrum image transcoding library</description>
